# ModstackAppNicerUIElements

./: .gitignore  Cargo.toml  README.md  heroui_docs.json  index.html  package-lock.json  package.json  plan.txt  vite.config.ts
.github/workflows/: release.yml
crates/mc_bootstrap/src/: lib.rs
crates/mc_downloader/: Cargo.toml
crates/mc_downloader/src/client/: downloader.rs  verify.rs
scripts/: merge-updates.js  release-full.js  release.js
src/: App.tsx  globals.css  main.tsx  react-experimental.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  LICENSE.rtf  config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord.rs  java_runtime.rs  logger.rs  main.rs  skin.js  skin_server.rs  state.rs  utils.rs
src-tauri/src/commands/: anyserver.rs  auth.rs  auth_success.html  bedrock.rs  config.rs  instance.rs  mod.rs  modrinth.rs  news.rs  skin.rs
src-tauri/src/core/: instance_manager.rs  launcher.rs  mod.rs
src/api/: instances.ts
src/components/: Capes.tsx  Frame.tsx  InstanceLogger.tsx  NavBar.tsx  NewsCarousel.tsx  ProgressRunning.tsx  UserBtn.tsx
src/components/icons/: ModrinthIcon.tsx  Ms.tsx
src/functions/: api.ts
src/hooks/: useNavigation.tsx
src/stores/: authContext.tsx  instanceContext.tsx  launchContext.tsx  settingsContext.tsx
src/utils/: anyserver.ts  bedrock.ts  localInstances.ts  modrinth.ts  mojang.ts  skinsStore.ts
src/views/: Bedrock.tsx  Home.tsx  Instances.tsx  Loading.tsx  ServerBrowser.tsx  Settings.tsx  Skins.tsx
